docs-website/versioned_docs/version-2.19/pipeline-components/generators.mdx
---
title: "Generators"
id: generators
slug: "/generators"
description: "Generators are responsible for generating text after you give them a prompt. They are specific for each LLM technology (OpenAI, local, TGI and others)."
---

# Generators

Generators are responsible for generating text after you give them a prompt. They are specific for each LLM technology (OpenAI, local, TGI and others).

| Generator                                                            | Description                                                                                                                                                                                                              | Streaming Support |
| :------------------------------------------------------------------- | :----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | :---------------- |
| [AmazonBedrockChatGenerator](/docs/amazonbedrockchatgenerator)       | Enables chat completion using models through Amazon Bedrock service.                                                                                                                                                     | ✅                 |
| [AmazonBedrockGenerator](/docs/amazonbedrockgenerator)               | Enables text generation using models through Amazon Bedrock service.                                                                                                                                                     | ✅                 |
| [AnthropicChatGenerator](doc:anthropicchatgenerator)                 | This component enables chat completions using Anthropic large language models (LLMs).                                                                                                                                    | ✅                 |
| [AnthropicVertexChatGenerator](doc:anthropicvertexchatgenerator)     | This component enables chat completions using AnthropicVertex API.                                                                                                                                                       | ✅                 |
| [AnthropicGenerator](doc:anthropicgenerator)                         | This component enables text completions using Anthropic large language models (LLMs).                                                                                                                                    | ✅                 |
| [AzureOpenAIChatGenerator](/docs/azureopenaichatgenerator)           | Enables chat completion using OpenAI’s LLMs through Azure services.                                                                                                                                                      | ✅                 |
| [AzureOpenAIGenerator](/docs/azureopenaigenerator)                   | Enables text generation using OpenAI’s LLMs through Azure services.                                                                                                                                                      | ✅                 |
| [CohereChatGenerator](/docs/coherechatgenerator)                     | Enables chat completion using Cohere's LLMs.                                                                                                                                                                             | ✅                 |
| [CohereGenerator](/docs/coheregenerator)                             | Queries the LLM using Cohere API.                                                                                                                                                                                        | ✅                 |
| [DALLEImageGenerator](doc:dalleimagegenerator)                       | Generate images using OpenAI's DALL-E model.                                                                                                                                                                             | ❌                 |
| [FallbackChatGenerator](doc:fallbackchatgenerator)                   | A ChatGenerator wrapper that tries multiple Chat Generators sequentially until one succeeds.                                                                                                                             | ✅                 |
| [GoogleAIGeminiChatGenerator](/docs/googleaigeminichatgenerator)     | Enables chat completion using Google Gemini models. **_This integration will be deprecated soon. We recommend using [GoogleGenAIChatGenerator](doc:googlegenaichatgenerator) integration instead._**                     | ✅                 |
| [GoogleAIGeminiGenerator](/docs/googleaigeminigenerator)             | Enables text generation using Google Gemini models. **_This integration will be deprecated soon. We recommend using [GoogleGenAIChatGenerator](doc:googlegenaichatgenerator)  integration instead._**                    | ✅                 |
| [GoogleGenAIChatGenerator](doc:googlegenaichatgenerator)             | Enables chat completion using Google Gemini models through Google Gen AI SDK.                                                                                                                                            | ✅                 |
| [HuggingFaceAPIChatGenerator](/docs/huggingfaceapichatgenerator)     | Enables chat completion using various Hugging Face APIs.                                                                                                                                                                 | ✅                 |
| [HuggingFaceAPIGenerator](/docs/huggingfaceapigenerator)             | Enables text generation using various Hugging Face APIs.                                                                                                                                                                 | ✅                 |
| [HuggingFaceLocalChatGenerator](/docs/huggingfacelocalchatgenerator) | Provides an interface for chat completion using a Hugging Face model that runs locally.                                                                                                                                  | ✅                 |
| [HuggingFaceLocalGenerator](/docs/huggingfacelocalgenerator)         | Provides an interface to generate text using a Hugging Face model that runs locally.                                                                                                                                     | ✅                 |
| [LlamaCppChatGenerator](doc:llamacppchatgenerator)                   | Enables chat completion using an LLM running on Llama.cpp.                                                                                                                                                               | ❌                 |
| [LlamaCppGenerator](/docs/llamacppgenerator)                         | Generate text using an LLM running with Llama.cpp.                                                                                                                                                                       | ❌                 |
| [LlamaStackChatGenerator](doc:googlegenaichatgenerator-copy)         | Enables chat completions using an LLM model made available via Llama Stack server                                                                                                                                        | ✅                 |
| [MetaLlamaChatGenerator](doc:metallamachatgenerator)                 | Enables chat completion with any model hosted available with Meta Llama API.                                                                                                                                             | ✅                 |
| [MistralChatGenerator](/docs/mistralchatgenerator)                   | Enables chat completion using Mistral’s text generation models.                                                                                                                                                          | ✅                 |
| [NvidiaChatGenerator](doc:nvidiachatgenerator)                       | Enables chat completion using Nvidia-hosted models.                                                                                                                                                                      | ✅                 |
| [NvidiaGenerator](/docs/nvidiagenerator)                             | Provides an interface for generating text using LLMs self-hosted with NVIDIA NIM or models hosted on the NVIDIA API catalog.                                                                                             | ❌                 |
| [OllamaChatGenerator](/docs/ollamachatgenerator)                     | Enables chat completion using an LLM running on Ollama.                                                                                                                                                                  | ✅                 |
| [OllamaGenerator](/docs/ollamagenerator)                             | Provides an interface to generate text using an LLM running on Ollama.                                                                                                                                                   | ✅                 |
| [OpenAIChatGenerator](/docs/openaichatgenerator)                     | Enables chat completion using OpenAI’s large language models (LLMs).                                                                                                                                                     | ✅                 |
| [OpenAIGenerator](/docs/openaigenerator)                             | Enables text generation using OpenAI's large language models (LLMs).                                                                                                                                                     | ✅                 |
| [OpenRouterChatGenerator](doc:openrouterchatgenerator)               | Enables chat completion with any model hosted on OpenRouter.                                                                                                                                                             | ✅                 |
| [SagemakerGenerator](/docs/SagemakerGenerator)                       | Enables text generation using LLMs deployed on Amazon Sagemaker.                                                                                                                                                         | ❌                 |
| [STACKITChatGenerator](doc:stackitchatgenerator)                     | Enables chat completions using the STACKIT API.                                                                                                                                                                          | ✅                 |
| [TogetherAIChatGenerator](/docs/togetheraichatgenerator)               | Enables chat completion using models hosted on Together AI.                                                                                                                                                              | ✅                 |
| [TogetherAIGenerator](/docs/togetheraigenerator)                       | Enables text generation using models hosted on Together AI.                                                                                                                                                              | ✅                 |
| [VertexAICodeGenerator](/docs/vertexaicodegenerator)                 | Enables code generation using Google Vertex AI generative model.                                                                                                                                                         | ❌                 |
| [VertexAIGeminiChatGenerator](/docs/vertexaigeminichatgenerator)     | Enables chat completion using Google Gemini models with GCP Vertex AI. **_This integration will be deprecated soon. We recommend using [GoogleGenAIChatGenerator](doc:googlegenaichatgenerator)  integration instead._** | ✅                 |
| [VertexAIGeminiGenerator](/docs/vertexaigeminigenerator)             | Enables text generation using Google Gemini models with GCP Vertex AI. **_This integration will be deprecated soon. We recommend using [GoogleGenAIChatGenerator](doc:googlegenaichatgenerator)  integration instead._** | ✅                 |
| [VertexAIImageCaptioner](/docs/vertexaiimagecaptioner)               | Enables text generation using Google Vertex AI `imagetext` generative model.                                                                                                                                             | ❌                 |
| [VertexAIImageGenerator](/docs/vertexaiimagegenerator)               | Enables image generation using Google Vertex AI generative model.                                                                                                                                                        | ❌                 |
| [VertexAIImageQA](/docs/vertexaiimageqa)                             | Enables text generation (image captioning) using Google Vertex AI generative models.                                                                                                                                     | ❌                 |
| [VertexAITextGenerator](/docs/vertexaitextgenerator)                 | Enables text generation using Google Vertex AI generative models.                                                                                                                                                        | ❌                 |
| [WatsonxGenerator](doc:watsonxgenerator)                             | Enables text generation with IBM Watsonx models.                                                                                                                                                                         | ✅                 |
| [WatsonxChatGenerator](doc:watsonxchatgenerator)                     | Enables chat completions with IBM Watsonx models.                                                                                                                                                                        | ✅                 |
